imp supp produit et modifier

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,8 @@
 		<div class="container">
 			<h1>OnlineSnackies</h1>
 			{% block content %}{% endblock %}
+			{% block formulaire %}{% endblock %}
+			{% block formulaire2 %}{% endblock %}
 		</div>
 
 
