--- a/templates/products/list.html.twig
+++ b/templates/products/list.html.twig
@@ -14,6 +14,7 @@
 				<th>Prix</th>
 				<th>Quantité</th>
 				<th>Modifier</th>
+				<th>Supprimer</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -24,7 +25,10 @@
 					<td>{{ product.price }}</td>
 					<td>{{ product.quantity }}</td>
 					<td>
-						<button type="button" class="btn btn-primary" onclick="window.location.href='/modifier'">Modifier</button>
+						<button type="button" class="btn btn-primary" onclick="window.location.href='/modifier/?id={{ product.id }}'">Modifier</button>
+					</td>
+					<td>
+						<button type="button" class="btn btn-danger" onclick="window.location.href='/supprimer/?id={{ product.id }}'">Supprimer</button>
 					</td>
 
 				</tr>
