--- a/templates/products/modifier.html.twig
+++ b/templates/products/modifier.html.twig
@@ -1,1 +1,23 @@
 {% extends "base.html.twig" %}
+
+{% block formulaire %}
+
+	<form action="/products/update" method="post">
+		<fieldset>
+			<legend>{{ product['name'] }}</legend>
+
+			<input type="hidden" id="id" name="id" value='{{product['id']}}'>
+			<div class="mb-3">
+				<label for="price" class="form-label">Prix</label>
+				<input type="number" step="0.01" min="0.10" max="20.00" class="form-control" id="price" name="price" value='{{product['price']}}'>
+			</div>
+			<div class="mb-3">
+				<label for="quantity" class="form-label">Produit</label>
+				<input type="number" class="form-control" id="quantity" name="quantity" value='{{product['quantity']}}'>
+			</div>
+			<button type="submit" class="btn btn-primary">Valider</button>
+		</fieldset>
+	</form>
+
+
+{% endblock %}
