--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,8 @@
 			{% block content %}{% endblock %}
 			{% block formulaire %}{% endblock %}
 			{% block formulaire2 %}{% endblock %}
+			{% block formulaire3 %}{% endblock %}
+			{% block formulaireAjouter %}{% endblock %}
 		</div>
 
 
