--- a/templates/products/delete.html.twig
+++ b/templates/products/delete.html.twig
@@ -3,7 +3,7 @@
 {% block formulaire2 %}
 
 
-	<form action="/products/supprimer" method="post">
+	<form action="/products/delete" method="post">
 		<fieldset>
 			<legend>Supprimer
 				{{ product['name'] }}</legend>
