--- a/templates/users/add.html.twig
+++ b/templates/users/add.html.twig
@@ -2,26 +2,26 @@
 
 {% block formulaireAjouter %}
 
-	<form action="/users/ajouter" method="post">
+	<form action="/users/add" method="post">
 		<fieldset>
 			<div class="mb-3">
-				<label for="nom" class="form-label">Nom :</label>
-				<input type="text" id="nom" name="nom" class="form-control"><br>
+				<label for="prenom" class="form-label">Prenom :</label>
+				<input type="text" id="prenom" name="firstName" class="form-control"><br>
 			</div>
 
 			<div class="mb-3">
-				<label for="prenom" class="form-label">prenom :</label>
-				<input type="text" id="prenom" name="prenom" class="form-control"><br>
+				<label for="nom" class="form-label">Nom :</label>
+				<input type="text" id="nom" name="lastName" class="form-control"><br>
 			</div>
 
 			<div class="mb-3">
 				<label for="email" class="form-label">Email :</label>
-				<input type="number" id="email" name="email" class="form-control"><br>
+				<input type="text" id="email" name="email" class="form-control"><br>
 			</div>
 
 			<div class="mb-3">
 				<label for="password" class="form-label">Password :</label>
-				<input type="number" id="password" name="password" class="form-control"><br>
+				<input type="text" id="password" name="password" class="form-control"><br>
 			</div>
 
 			<div class="mb-3">
