--- a/templates/products/add.html.twig
+++ b/templates/products/add.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block formulaire3 %}
+{% block formulaire %}
 
 	<form action="/products/add" method="post">
 		<fieldset>
