--- a/templates/products/delete.html.twig
+++ b/templates/products/delete.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block formulaire2 %}
+{% block formulaire %}
 
 
 	<form action="/products/delete" method="post">
