--- a/templates/users/add.html.twig
+++ b/templates/users/add.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block formulaireAjouter %}
+{% block formulaire %}
 
 	<form action="/users/add" method="post">
 		<fieldset>
