--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,16 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="/">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Products</a>
+							<a class="nav-link" href="/products">Products</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Users</a>
+							<a class="nav-link" href="/users">Users</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/login">Login</a>
 						</li>
 					</ul>
 				</div>
@@ -33,9 +36,6 @@
 			<h1>OnlineSnackies</h1>
 			{% block content %}{% endblock %}
 			{% block formulaire %}{% endblock %}
-			{% block formulaire2 %}{% endblock %}
-			{% block formulaire3 %}{% endblock %}
-			{% block formulaireAjouter %}{% endblock %}
 		</div>
 
 
